--- a/css/style.css
+++ b/css/style.css
@@ -16,55 +16,35 @@ html {
   font-size: 62.5%; }
 
 body {
+  box-sizing: border-box; }
+
+body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   /* font-size: 16px; */
   line-height: 1.7;
   color: #777;
-  padding: 3rem;
-  box-sizing: border-box; }
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(253, 216, 53, 0.8), rgba(251, 140, 0, 0.8)), url(../img/beatch.jpg);
-  background-position: top;
-  background-size: cover;
-  clip-path: polygon(0 0, 100% 0, 100% 48rem, 0 100%);
-  position: relative; }
-  .header .logo-box {
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-    .header .logo-box .logo {
-      height: 10rem; }
-  .header .text-box {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
+  padding: 3rem; }
 
 .heading-primary {
   color: white;
   text-transform: uppercase;
   /* backface-visibility: hidden; */
   margin-bottom: 6rem; }
-
-.heading-primary-main {
-  display: block;
-  font-size: 6.5rem;
-  font-weight: 400;
-  letter-spacing: 4rem;
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-out; }
-
-.heading-primary-sub {
-  display: block;
-  font-size: 2.2rem;
-  font-weight: 70rem;
-  letter-spacing: 1.7rem;
-  animation: moveInRight 1s ease-in; }
+  .heading-primary-main {
+    display: block;
+    font-size: 6.5rem;
+    font-weight: 400;
+    letter-spacing: 4rem;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out; }
+  .heading-primary-sub {
+    display: block;
+    font-size: 2.2rem;
+    font-weight: 70rem;
+    letter-spacing: 1.7rem;
+    animation: moveInRight 1s ease-in; }
 
 @keyframes moveInLeft {
   0% {
@@ -94,9 +74,7 @@ body {
     opacity: 1;
     transform: translate(0); } }
 
-/* the normal state of link */
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -113,6 +91,9 @@ body {
 .btn:hover {
   transform: translateY(-0.3rem);
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
 
 .btn:active {
   transform: translateY(0, 1rem);
@@ -121,6 +102,8 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777; }
+  .btn-white::after {
+    background-color: white; }
 
 .btn::after {
   content: "";
@@ -137,13 +120,26 @@ body {
   z-index: -1;
   transition: all .4s; }
 
-.btn-white::after {
-  background-color: white; }
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0; }
-
 .btn-animation {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(253, 216, 53, 0.8), rgba(251, 140, 0, 0.8)), url(../img/beatch.jpg);
+  background-position: top;
+  background-size: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 48rem, 0 100%);
+  position: relative; }
+  .header .logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+    .header .logo-box .logo {
+      height: 10rem; }
+  .header .text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
