--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,12 @@ body {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards; }
 
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto;
+  margin-bottom: 80px; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(253, 216, 53, 0.8), rgba(251, 140, 0, 0.8)), url(../img/beatch.jpg);
