--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -14,6 +14,12 @@
     [class^="col-"] {
         background-color: orangered;
         float: left;
+        height: 80px;
+        padding: 20px 20px;
+        text-align: center;
+        color: white;
+        font-weight: bold;
+        font-size: 12pt;
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
