Add utilitie classes

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,7 +9,11 @@ Dark orange: #fb8c00
 $color-primary: #ffb300;
 $color-primary-light: #fdd835;
 $color-primary-dark: #fb8c00;
+
 $color-grey-dark: #777;
+
+$color-grey-light-1: #f7f7f7;
+
 $color-white: #fff;
 $color-black: #000;
 
