--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,6 +1,6 @@
 .row {
     max-width: 114rem;
-    background-color: #eee;
+    // background-color: #eee;
     margin: 0 auto;
     margin-bottom: 80px;
 
@@ -12,14 +12,14 @@
 
     // selected all class the started with  "col-"
     [class^="col-"] {
-        background-color: orangered;
+        // background-color: orangered;
         float: left;
-        height: 80px;
-        padding: 20px 20px;
-        text-align: center;
-        color: white;
-        font-weight: bold;
-        font-size: 12pt;
+        // height: 80px;
+        // padding: 20px 20px;
+        // text-align: center;
+        // color: white;
+        // font-weight: bold;
+        // font-size: 12pt;
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
