add about section with new button

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -61,3 +61,23 @@
         animation-fill-mode: backwards;
     }
 }
+
+.btn-text {
+    &:link,
+    &:visited {
+        font-size: 1.6rem;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 3px;
+    }
+
+    &:hover {
+
+    }
+
+    &:active {
+
+    }
+}
