--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -51,4 +51,17 @@ body {
     }
 }
 
+.heading-teritary {
+    font-size: 1.6rem;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: 1.6rem;
+
+    &:not(:last-child) {
+        margin-bottom: 3rem;
+    }
+}
 
