--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -17,6 +17,9 @@ $color-grey-light-1: #f7f7f7;
 $color-white: #fff;
 $color-black: #000;
 
+// FONT SIZE
+$default-font-size: 1.6rem;
+
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
