--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -12,7 +12,7 @@
         /* animate all transform in the button for 2sek */
         transition: all .2s;
         position: relative;
-        font-size: 1.6rem;
+        font-size: $default-font-size;
     }
     
     &:hover {
@@ -65,19 +65,24 @@
 .btn-text {
     &:link,
     &:visited {
-        font-size: 1.6rem;
+        font-size: $default-font-size;
         color: $color-primary;
         display: inline-block;
         text-decoration: none;
         border-bottom: 1px solid $color-primary;
         padding: 3px;
+        transition: all 0.2s;
     }
 
     &:hover {
-
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, .15);
+        transform:  translate(-2px);
     }
 
     &:active {
-
+        box-shadow: 0 5rem 2rem rgba($color-black, .15);
+        transform:  translate(0);
     }
 }
