--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,8 @@ body {
     border-radius: 2px;
     position: absolute;
     z-index: 10;
-    transition: all .2s; }
+    transition: all .2s;
+    outline-offset: 2rem; }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
@@ -199,6 +200,7 @@ body {
       left: 20%;
       top: 10rem; }
     .composition__photo:hover {
+      outline: 1.5rem solid #ffb300;
       transform: scale(1.05);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
