Completed about section

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ body {
       top: 10rem; }
     .composition__photo:hover {
       outline: 1.5rem solid #ffb300;
-      transform: scale(1.05);
+      transform: scale(1.05) translateY(-0.5rem) rotate(10deg);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
   .composition:hover .composition__photo:not(:hover) {
