--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -27,7 +27,7 @@
 
         &:hover {
             outline: 1.5rem solid $color-primary;
-            transform: scale(1.05);
+            transform: scale(1.05) translateY(-.5rem) rotate(10deg);
             box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
             z-index: 20;
         }
