--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,5 +6,15 @@
 
 .section-features {
     padding: 20rem 0;
-    
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8), 
+        rgba($color-primary-dark, 0.8)) ,
+        url(../img/o2.jpg);
+    background-size: cover;
+    transform: skewY(-7deg);
+    margin-top: -15rem;
+    & > * {
+        transform: skewY(7deg);
+    }
 }
