--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,16 +1,49 @@
 .card {
     perspective: 150rem;
     -moz-perspective: 150rem;
+    position: relative;
+    height: 50rem;
 
     &__side {
-        background-color: aqua;
         height: 50rem;
         color: white;
         font-size: 2rem;
-        transition: all .8s;
+        transition: all .8s ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        backface-visibility: hidden;
+        border-radius: 3px;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &--front {
+            background-color: $color-grey-light-1;
+        }
+
+        &--back {
+            background-color: blue;
+            transform: rotateY(180deg);
+
+            &-1 {
+                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
+            }
+
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
+
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
+        }
     }
 
-    &:hover &__side {
+    &:hover &__side--front {
         transform: rotateY(180deg);
+    }
+
+    &:hover &__side--back {
+        transform: rotateY(0);
     }
 }
