--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ body {
     width: 100%;
     backface-visibility: hidden;
     border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
     .card__side--front {
       background-color: #f7f7f7; }
@@ -209,9 +210,41 @@ body {
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #fdd835, #fb8c00); }
   .card:hover .card__side--front {
-    transform: rotateY(180deg); }
+    transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #7ed567, #28b485), url(../../img/s1.jpg); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../../img/s2.jpg); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right bottom, #fdd835, #fb8c00), url(../../img/s3.jpg); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    text-align: right;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background: linear-gradient(to right bottom, rgba(126, 213, 103, 0.85), rgba(40, 180, 133, 0.85)); }
+    .card__heading-span--2 {
+      background: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+    .card__heading-span--3 {
+      background: linear-gradient(to right bottom, rgba(253, 216, 53, 0.85), rgba(251, 140, 0, 0.85)); }
 
 .composition {
   position: relative; }
