--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,12 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
+.u-margin-top-huge {
+  margin-top: 10rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -136,11 +142,17 @@ body {
   transform: translateY(0, 1rem);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
+.btn-orange {
+  background-color: #ffb300;
+  color: #fff; }
+  .btn-orange::after {
+    background-color: #fff; }
+
 .btn-white {
   background-color: #fff;
   color: #777; }
   .btn-white::after {
-    background-color: white; }
+    background-color: #fff; }
 
 .btn::after {
   content: "";
@@ -245,6 +257,36 @@ body {
       background: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
     .card__heading-span--3 {
       background: linear-gradient(to right bottom, rgba(253, 216, 53, 0.85), rgba(251, 140, 0, 0.85)); }
+  .card__details {
+    color: black;
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(last-child) {
+          border-bottom: 1px solid #eee; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    margin-bottom: 8rem;
+    color: #fff; }
+  .card__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 200; }
 
 .composition {
   position: relative; }
