--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -30,12 +30,21 @@
         box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
     
+    &-orange {
+        background-color: $color-primary;
+        color: $color-white;
+        
+        &::after {
+            background-color: $color-white;
+        }
+    }
+
     &-white {
         background-color: $color-white;
         color: $color-grey-dark;
         
         &::after {
-            background-color: white;
+            background-color: $color-white;
         }
     }
     
