--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,6 @@
     background-size: cover;
     transform: skewY(-7deg);
     margin-top: -12rem;
-    margin-bottom: 10rem;
     & > * {
         transform: skewY(7deg);
     }
@@ -22,7 +21,11 @@
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 25rem 0 50rem 0;
-    margin-top: -22rem;
+    padding: 25rem 0 10rem 0;
+    margin-top: -12rem;
+}
 
+.section-stories {
+    padding: 15rem 0;
+    background-color: $color-grey-light-1;
 }
