Create Form input

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,6 +10,10 @@ $color-primary: #ffb300;
 $color-primary-light: #fdd835;
 $color-primary-dark: #fb8c00;
 
+$color-danger: rgb(248, 31, 31);
+$color-success: rgb(68, 248, 68);
+
+
 $color-secondary-light: #7ed567;
 $color-secondary-dark: #28b485;
 
@@ -17,6 +21,7 @@ $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
