--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -13,9 +14,13 @@
         transition: all .2s;
         position: relative;
         font-size: $default-font-size;
+
+        // Change for the button element
+        border: none;
+        cursor: pointer;
     }
     
-    &:hover {
+    &:hover{
         transform: translateY(-0.3rem);
         box-shadow: 0 1rem 1rem rgba($color-black, 0.2);
 
@@ -25,7 +30,8 @@
         }
     }
     
-    &:active {
+    &:active
+    &:focus {
         transform: translateY(-0,1rem);
         box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
