--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,8 +13,9 @@
 @import "components/feature-box";
 @import "components/story";
 @import "components/bg-video";
-@import "components/form";
 
+
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
