--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,19 +2,23 @@
     background-color: $color-grey-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
+    color: $color-grey-light-1;
 
     &__logo-box {
         text-align: center;
-        margin-bottom: 8rem;
+        margin-bottom: 4rem;
     }
 
     &__logo {
         width: 15rem;
         height: auto;
+        margin-bottom: 5rem;
     }
 
     &__navigation {
-        border-top: 1px solid $color-grey-light-3;
+        border-top: 1px solid $color-grey-dark;
+        padding: 2rem;
+        display: inline-block;
     }
 
     &__list {
@@ -33,6 +37,7 @@
         &:link,
         &:visited {
             color: $color-grey-light-1;
+            background-color: $color-grey-dark-3;
             text-decoration: none;
             text-transform: uppercase;
             display: inline-block;
@@ -43,8 +48,16 @@
         &:active {
             color: $color-primary;
             box-shadow: 0 1rem 2rem rgba($color-black, .4);
-            transform: rotate(5deg) scale(1.3rem)
+            transform: rotate(-5deg) scale(1.3)
 
         }
+    }
+
+    &__copyright {
+        border-top: 1px solid $color-grey-dark;
+        padding-top: 2rem;
+        width: 80%;
+        text-align: left;
+        float: right;
     }
 }
