--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -133,6 +133,17 @@
     }
 
     &__checkbox:checked + &__button &__icon {
-        
+       background-color: transparent; 
+    }
+    
+    &__checkbox:checked + &__button &__icon::before {
+        top: 0;
+        transform: rotate(135deg);
+    }
+
+    &__checkbox:checked + &__button &__icon::after {
+        top: 0;
+        transform: rotate(-135deg);
+    
     }
 }
