--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,10 +7,36 @@
 }
 
 html {
-    /* 10/16 = 62.5% */
-    font-size: 62.5%;
+    /* FROM BIG TO SMALL */
+    /* 100/16 = 62.5% */
+    font-size: 62.5%;  // 1rem = 10px; 10px/16px = 62.5%
+
+
+    @include respond(big-desktop) {
+        font-size: 75%; // 1rem = 4.8px. 4.8/16 = 75%
+    }
+
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1rem = 9px. 9/16 = 56.25%
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%; // 1rem = 8px. 8/16 = 50%
+    }
+
+    @include respond(phone) {
+        font-size: 30%; // 1rem = 8px, 8/16 = 30%
+    }
+
+   
 }
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
+
 }
