--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,11 +1,19 @@
 .row {
-    max-width: 114rem;
+    max-width: $grid-width;
     // background-color: #eee;
     margin: 0 auto;
     margin-bottom: 80px;
 
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+
+        @include respond(tab-port) {
+            margin-bottom: $gutter-vertical-small;
+        }
+    }
+
+    @include respond(tab-port) {
+       max-width: 50rem;
     }
 
     @include clearfix;
@@ -23,6 +31,15 @@
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+
+            @include respond(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include respond(tab-port) {
+            width: 100% !important;
         }
     }
 
