--- a/css/style.css
+++ b/css/style.css
@@ -821,6 +821,9 @@ body {
 .navigation__item {
   margin: 1rem; }
 
+.navigation__item:visited ~ .navigation__background {
+  transform: scale(80); }
+
 .navigation__link:link, .navigation__link:visited {
   display: inline-block;
   font-size: 3rem;
@@ -889,7 +892,9 @@ body {
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
-  margin-top: -20vh; }
+  margin-top: -20vh;
+  margin-left: 5rem;
+  margin-right: 5rem; }
   @media (max-width: 56.25em) {
     .section-about {
       padding: 20rem 0; } }
