--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,8 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -20vh;
+    margin-left: 5rem;
+    margin-right: 5rem;
 
     @include respond(tab-port) {
         padding: 20rem 0;
