--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
        to right bottom,
      rgba($color-primary-light, 0.8), 
      rgba($color-primary-dark, 0.8)) ,
-       url(../img/beatch.jpg);
+       url(../img/head-orange.jpg);
     background-position: top;
     background-size: cover;
     -webkit-clip-path: polygon(0 0,100% 0,100% 75vh, 0 100%);
